--- a/forms/base.html
+++ b/forms/base.html
@@ -89,12 +89,12 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="footer-info">
-              <h3>Medicio</h3>
+              <h3>GoPro on Your Visits</h3>
               <p>
-                A108 Adam Street <br>
-                NY 535022, USA<br><br>
-                <strong>Phone:</strong> +1 5589 55488 55<br>
-                <strong>Email:</strong> info@example.com<br>
+                Muindi Mbingu Street <br>
+                Nairobi 535-00101, Kenya<br><br>
+                <strong>Phone:</strong> +254 754008855<br>
+                <strong>Email:</strong> gopro@info.co.ke<br>
               </p>
               <div class="social-links mt-3">
                 <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
@@ -143,7 +143,7 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>Medicio</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>GoPro on Your Visits</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
