--- a/forms/base.html
+++ b/forms/base.html
@@ -120,17 +120,17 @@
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Our Services</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Doctor Care</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Dentistry</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Nursing</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Physical therapy</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Outpatient care</a></li>
             </ul>
           </div>
 
           <div class="col-lg-4 col-md-6 footer-newsletter">
-            <h4>Our Newsletter</h4>
-            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
+            <h4>Inspiring healthy habits</h4>
+            <p>Healthcare with more comfort</p>
             <form action="" method="post">
               <input type="email" name="email"><input type="submit" value="Subscribe">
             </form>
