--- a/forms/base.html
+++ b/forms/base.html
@@ -30,10 +30,10 @@
   <link href="../static/../static/assets/css/style.css" rel="stylesheet">
 
   <!-- =======================================================
-  * Template Name: Medicio
+  * Template Name: GoPro on Your Visits
   * Updated: Sep 18 2023 with Bootstrap v5.3.2
   * Template URL: https://bootstrapmade.com/medicio-free-bootstrap-theme/
-  * Author: BootstrapMade.com
+  * Author: Isaac Githinji
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
 </head>
