--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -14,7 +14,7 @@
       <div class="carousel-inner" role="listbox">
 
         <!-- Slide 1 -->
-        <div class="carousel-item active" style="background-image: url(../static/assets/img/slide/slide-1.jpg)">
+        <div class="carousel-item active" style="background-image: url(.../static/assets/img/slide/slide-1.jpg)">
           <div class="container">
             <h2>Welcome to <span>GoProApp</span></h2>
             <p>Welcome to Go Pro App.</p>
