--- a/forms/base.html
+++ b/forms/base.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Medicio Bootstrap Template - Index</title>
+  <title>GoPro on Your Visits</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -30,7 +30,7 @@
   <link href="../static/../static/assets/css/style.css" rel="stylesheet">
 
   <!-- =======================================================
-  * Template Name: GoPro on Your Visits
+  * Template Name: GoPro on Your Name
   * Updated: Sep 18 2023 with Bootstrap v5.3.2
   * Template URL: https://bootstrapmade.com/medicio-free-bootstrap-theme/
   * Author: Isaac Githinji
@@ -60,7 +60,7 @@
       <!-- Uncomment below if you prefer to use an image logo -->
       <!--h1 class="logo me-auto"><a href="index.html">Medicio</a></h1> -->
 
-      <nav id="navbar" class="navbar order-last order-lg-0">
+      <!--nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
           <li><a class="nav-link scrollto " href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
@@ -70,7 +70,7 @@
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
 
-      <a href="/booking" class="appointment-btn scrollto"><span class="d-none d-md-inline">Make </span> Booking</a>
+      <!--a href="/booking" class="appointment-btn scrollto"><span class="d-none d-md-inline">Make </span> Booking</a-->
       {% if not current_user.is_authenticated %}
       <a href="/login" class="appointment-btn scrollto"><span class="d-none d-md-inline"></span>Login</a>
      {% endif %}
@@ -89,24 +89,24 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="footer-info">
-              <h3>GoPro on Your Visits</h3>
+              <h3>Contact Us</h3>
               <p>
                 Muindi Mbingu Street <br>
                 Nairobi 535-00101, Kenya<br><br>
                 <strong>Phone:</strong> +254 754008855<br>
                 <strong>Email:</strong> gopro@info.co.ke<br>
               </p>
-              <div class="social-links mt-3">
+              <!--div class="social-links mt-3">
                 <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
                 <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
                 <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
                 <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
                 <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-              </div>
+            </div-->
             </div>
           </div>
 
-          <div class="col-lg-2 col-md-6 footer-links">
+          <!--div class="col-lg-2 col-md-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
@@ -115,9 +115,9 @@
               <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
             </ul>
-          </div>
+        </div-->
 
-          <div class="col-lg-3 col-md-6 footer-links">
+          <!--div class="col-lg-3 col-md-6 footer-links">
             <h4>Our Services</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Doctor Care</a></li>
@@ -126,7 +126,7 @@
               <li><i class="bx bx-chevron-right"></i> <a href="#">Physical therapy</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Outpatient care</a></li>
             </ul>
-          </div>
+        </div-->
 
           <div class="col-lg-4 col-md-6 footer-newsletter">
             <h4>Inspiring healthy habits</h4>
@@ -146,11 +146,8 @@
         &copy; Copyright <strong><span>GoPro on Your Visits</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/medicio-free-bootstrap-theme/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        
+        Designed by <a href="#">Isaac Githinji</a>
       </div>
     </div>
   </footer><!-- End Footer -->
