--- a/forms/login.html
+++ b/forms/login.html
@@ -9,7 +9,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Contact</h2>
+          <h2>GoPro on Your Visits</h2>
           <p>You can always contact us at any time of the day through our contact details provided. You can reach us through calls, whatsapp, email or through our website forms for any question and suggestions.</p>
         </div>
 
