--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -14,26 +14,26 @@
       <div class="carousel-inner" role="listbox">
 
         <!-- Slide 1 -->
-        <div class="carousel-item active" style="background-image:url(../static/assets/img/slide/slide-1.jpg)">
+        <div class="carousel-item active" style="background-image: url(../img/slide/slide-1.jpg)">
           <div class="container">
             <h2>Welcome to <span>GoProApp</span></h2>
             <p>Welcome to Go Pro App.</p>
 =======
             <h2>Welcome to <span>All Nairobi hospitals center.</span></h2>
             <p>The Earth does not belong to us: we belong to the Earth.</p>
-            <a href="#about" class="btn-get-started scrollto">Read More</a>
+            <!--a href="#about" class="btn-get-started scrollto">Read More</a-->
           </div>
         </div>
 
         <!-- Slide 2 -->
-        <div class="carousel-item" style="background-image:url(../static/assets/img/slide/slide-2.jpg)">
+        <div class="carousel-item" style="background-image: url(../static/assets/img/slide/slide-2.jpg)">
           <div class="container">
             <h2>Services Availability</h2>
             <p>At GoProApp we make healthcare very navigable.</p>
 =======
             <h2>Sustainability</h2>
             <p>"Healthcare is the most precious thing." - Ralph Waldo Emerson</p>
-            <a href="#about" class="btn-get-started scrollto">Read More</a>
+            <!--a href="#about" class="btn-get-started scrollto">Read More</a-->
           </div>
         </div>
 
@@ -45,7 +45,7 @@
 =======
             <h2>Ecology</h2>
             <p>We wont have a society if we dont have healthcare.</p>
-            <a href="#about" class="btn-get-started scrollto">Read More</a>
+            <!--a href="#about" class="btn-get-started scrollto">Read More</a-->
           </div>
         </div>
 
@@ -65,7 +65,7 @@
   <main id="main">
 
     <!-- ======= Featured Services Section ======= -->
-    <section id="featured-services" class="featured-services">
+    <!--section id="featured-services" class="featured-services">
       <div class="container" data-aos="fade-up">
 
         <div class="row">
@@ -106,7 +106,7 @@
       </div>
     </section><!-- End Featured Services Section -->
 
-    <!-- ======= Cta Section ======= -->
+    <!-- ======= Cta Section ======= >
     <section id="cta" class="cta">
       <div class="container" data-aos="zoom-in">
 
@@ -116,7 +116,7 @@
           <a class="cta-btn scrollto" href="#booking">Make an Make a Booking</a>
         </div>
 
-      </div>
+      </div-->
     </section><!-- End Cta Section -->
 
 
